# i3ipc-rs

./: .travis.yml  Cargo.toml  LICENSE.md  README.md  travis.sh
.circleci/: config.yml
examples/: command_loop.rs  event_printer.rs  get_tree.rs  hovered_window.rs
scripts/: compare.sh
src/: common.rs  event.rs  lib.rs  readhelp.rs  reply.rs
