[package]
name = "i3ipc"
version = "0.10.1"
authors = ["Trevor Merrifield <trevorm42@gmail.com>"]
description = "A library for controlling i3-wm through its IPC interface"
license = "MIT"
repository = "https://github.com/tmerr/i3ipc-rs"

[dependencies]
byteorder = "1.2.7"
log = "0.4.6"
serde = "1.0.80"
serde_json = "1.0.32"

[features]
i3-4-12 = []
i3-4-13 = ["i3-4-12"]
i3-4-14 = ["i3-4-13"]
i3-next = ["i3-4-14"]
dox = ["i3-next"]

[package.metadata.docs.rs]
features = ["dox"]
